--- a/src/pages/index.mustache
+++ b/src/pages/index.mustache
@@ -115,7 +115,7 @@
 
 
     <!--Footer Section-->
-    <div id="footer-div" class="container-fluid">
+    <div id="footer-div" class="container-fluid bg-primary">
         <footer class="mt-4 pt-2">
             <ul class="nav justify-content-center">
                 <li class="nav-item"><a href="/" class="nav-link px-2 text-body-secondary">Home</a></li>
