--- a/src/pages/index.mustache
+++ b/src/pages/index.mustache
@@ -6,14 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vanessa Vega</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous"
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Courier+Prime:ital,wght@0,400;0,700;1,400;1,700&family=Montserrat:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="/styles.css">
-
 </head>
 
 <body>
@@ -84,7 +83,7 @@
     <!--Listing Section-->
     <div class="container">
         <div class="d-flex justify-content-center">
-            <a role="button" class="btn btn-secondary btn-lg" href="/listings">View Listings</a>
+            <a role="button" class="btn btn-primary btn-lg" href="/listings">View Listings</a>
         </div>
     </div>
 
@@ -115,7 +114,7 @@
 
 
     <!--Footer Section-->
-    <div id="footer-div" class="container-fluid bg-primary">
+    <div id="footer-div" class="container-fluid bg-vv-primary">
         <footer class="mt-4 pt-2">
             <ul class="nav justify-content-center">
                 <li class="nav-item"><a href="/" class="nav-link px-2 text-body-secondary">Home</a></li>
