--- a/src/pages/index.mustache
+++ b/src/pages/index.mustache
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vanessa Vega</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -17,7 +17,7 @@
 
 <body>
     <!--Header Section-->
-    <div class="sticky-top" id="header-div">
+    <div class="sticky-top bg-vv-primary">
         <div class="container-fluid text-center">
             <div class="row">
                 <div class="col-6 pt-2">
@@ -69,11 +69,11 @@
                 <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3 text-center text-lg-start color-secondary">
                     Feel Confident in Buying!</h1>
                 <p class="lead text-center text-lg-start">Quick design and customize responsive mobile-first sites with
-                    Bootstrap, the world’s
+                    Bootstrap, the world's
                     most popular front-end open source toolkit, featuring Sass variables and mixins, responsive grid
                     system, extensive prebuilt components, and powerful JavaScript plugins.</p>
                 <div class="d-grid gap-2 d-md-flex justify-content-center justify-content-lg-start">
-                    <a id="hero-btn" type="button" class="btn btn-primary btn-lg px-4 me-md-2" href="/about">Meet
+                    <a type="button" class="btn btn-vv-primary btn-lg px-4 me-md-2" href="/about">Meet
                         Vanessa</a>
                 </div>
             </div>
@@ -83,7 +83,7 @@
     <!--Listing Section-->
     <div class="container">
         <div class="d-flex justify-content-center">
-            <a role="button" class="btn btn-primary btn-lg" href="/listings">View Listings</a>
+            <a role="button" class="btn btn-vv-primary btn-lg" href="/listings">View Listings</a>
         </div>
     </div>
 
@@ -95,8 +95,7 @@
         <div class="container">
             <div class="d-flex row justify-content-center">
                 {{#locations}}
-                <div id="location-card"
-                    class="col-6 col-md-4 card text-center mt-4 mx-4 d-flex justify-content-center align-items-center">
+                <div class="col-6 col-md-4 card text-center mt-4 mx-4 d-flex justify-content-center align-items-center bg-vv-primary">
                     <div class="card-body">
                         <h5 id="location-card-text" class="card-title m-0">{{city}}</h5>
                     </div>
@@ -106,7 +105,7 @@
         </div>
         <div class="container">
             <div class="d-flex justify-content-center my-5">
-                <a role="button" class="btn btn-secondary btn-lg" href="/contact">Contact Me</a>
+                <a role="button" class="btn btn-vv-secondary btn-lg" href="/contact">Contact Me</a>
             </div>
         </div>
     </div>
@@ -114,7 +113,7 @@
 
 
     <!--Footer Section-->
-    <div id="footer-div" class="container-fluid bg-primary">
+    <div class="container-fluid bg-vv-primary">
         <footer class="mt-4 pt-2">
             <ul class="nav justify-content-center">
                 <li class="nav-item"><a href="/" class="nav-link px-2 text-body-secondary">Home</a></li>
