--- a/src/pages/index.mustache
+++ b/src/pages/index.mustache
@@ -21,10 +21,10 @@
         <div class="container-fluid text-center">
             <div class="row">
                 <div class="col-6 pt-2">
-                    (909)746-9872
+                    <p>(909)746-9872</p>
                 </div>
                 <div class="col-6 pt-2">
-                    Realtor with Capre
+                    <p>Realtor with Capre</p>
                 </div>
             </div>
         </div>
@@ -42,7 +42,7 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse justify-content-end align-items-end" id="navbarSupportedContent">
-                    <ul class="navbar-nav">
+                    <ul class="navbar-nav ">
                         <li class="nav-item">
                             <a class="nav-link" href="/about">About</a>
                         </li>
@@ -97,7 +97,7 @@
                 {{#locations}}
                 <div class="col-6 col-md-4 card text-center mt-4 mx-4 d-flex justify-content-center align-items-center bg-vv-primary">
                     <div class="card-body">
-                        <h5 id="location-card-text" class="card-title m-0">{{city}}</h5>
+                        <p id="location-card-text" class="card-title m-0">{{city}}</p>
                     </div>
                 </div>
                 {{/locations}}
