--- a/src/pages/index.mustache
+++ b/src/pages/index.mustache
@@ -60,9 +60,9 @@
 
     <!--Hero Section-->
     <div class="container col-xxl-8 px-4 py-5">
-        <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
+        <div class="row flex-lg-row-reverse justify-content-center align-items-center g-5 py-5">
             <div class="col-10 col-sm-8 col-lg-6">
-                <img src="portraitnormal.jpg" class="d-block mx-lg-auto img-fluid" alt="Vanessa Vega Portrait"
+                <img src="portraitnormal.jpg" class="d-block mx-lg-auto img-fluid rounded-3" alt="Vanessa Vega Portrait"
                     width="700" height="500" loading="lazy">
             </div>
             <div class="col-lg-6">
