--- a/src/pages/index.mustache
+++ b/src/pages/index.mustache
@@ -17,7 +17,7 @@
 
 <body>
     <!--Header Section-->
-    <div class="sticky-top bg-vv-primary">
+    <div class="sticky-top bg-vv-primary shadow-lg">
         <div class="container-fluid text-center">
             <div class="row">
                 <div class="col-6 pt-2">
