--- a/src/pages/index.mustache
+++ b/src/pages/index.mustache
@@ -17,31 +17,31 @@
 
 <body>
     <!--Header Section-->
-    <div class="sticky-top bg-vv-primary shadow-lg">
-        <div class="container-fluid text-center">
-            <div class="row">
-                <div class="col-6 pt-2">
-                    <p>(909)746-9872</p>
-                </div>
-                <div class="col-6 pt-2">
-                    <p>Realtor with Capre</p>
-                </div>
-            </div>
-        </div>
-        <nav class="navbar navbar-expand-md shadow">
+    <div class="sticky-top shadow-lg" id="header">
+        <nav class="navbar navbar-expand-md shadow p-0">
 
-            <div class="container-fluid">
-                <a class="navbar-brand d-flex align-items-center" href="/">
-                    <img src="Logo_Capre_blk_and_gold__1_-removebg-preview.PNG" alt="Capre Logo PNG" height="64px"
-                        width="64px">
-                    <h2>Vanessa Vega</h2>
-                </a>
-                <button class="navbar-toggler navbar-dark" type="button" data-bs-toggle="collapse"
+            <div class="container-fluid p-0">
+                <div class="bg-vv-primary shadow-lg" id="header-main">
+                    <div class="px-3">
+                        <a class="navbar-brand d-flex align-items-center flex-column flex-md-row justify-content-center justify-content-md-start m-0 pt-4" href="/">
+                            <img src="Logo_Capre_blk_and_gold__1_-removebg-preview.PNG" alt="Capre Logo PNG"
+                                height="64px" width="64px">
+                            <h2>Vanessa Vega</h2>
+                        </a>
+                    </div>
+                    <div class="text-center text-md-start px-md-5 mx-md-5 color-vv-primary">
+                        <p>DRE 02227468</p>
+                        <p>(909)746-9872</p>
+                    </div>
+
+                </div>
+
+                <button class="navbar-toggler navbar-dark mx-3" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse justify-content-end align-items-end" id="navbarSupportedContent">
+                <div class="collapse navbar-collapse justify-content-end align-items-end mx-3" id="navbarSupportedContent">
                     <ul class="navbar-nav ">
                         <li class="nav-item">
                             <a class="nav-link" href="/about">About</a>
@@ -59,20 +59,19 @@
     </div>
 
     <!--Hero Section-->
-    <div class="container col-xxl-8 px-4 py-5">
-        <div class="row flex-lg-row-reverse justify-content-center align-items-center g-5 py-5">
+    <div class="container col-xxl-8 py-5">
+        <div class="row flex-lg-row-reverse justify-content-center align-items-center g-5 py-5 px-4">
             <div class="col-10 col-sm-8 col-lg-6">
                 <img src="portraitnormal.jpg" class="d-block mx-lg-auto img-fluid rounded-3" alt="Vanessa Vega Portrait"
                     width="700" height="500" loading="lazy">
             </div>
-            <div class="col-lg-6">
-                <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3 text-center text-lg-start color-secondary">
-                    Feel Confident in Buying!</h1>
-                <p class="lead text-center text-lg-start">Quick design and customize responsive mobile-first sites with
-                    Bootstrap, the world's
-                    most popular front-end open source toolkit, featuring Sass variables and mixins, responsive grid
-                    system, extensive prebuilt components, and powerful JavaScript plugins.</p>
-                <div class="d-grid gap-2 d-md-flex justify-content-center justify-content-lg-start">
+            <div class="col-lg-6 rounded-5">
+                <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3 text-center color-secondary border-bottom">
+                    Turning the Key to Your Future</h1>
+                <p class="lead text-center">
+                    Your CAPRE Real Estate Partner
+                </p>
+                <div class="d-grid gap-2 d-md-flex justify-content-center">
                     <a type="button" class="btn btn-vv-primary btn-lg px-4 me-md-2" href="/about">Meet
                         Vanessa</a>
                 </div>
@@ -82,7 +81,7 @@
 
     <!--Listing Section-->
     <div class="container">
-        <div class="d-flex justify-content-center">
+        <div class="d-flex justify-content-center border-top border-bottom py-5">
             <a role="button" class="btn btn-vv-primary btn-lg" href="/listings">View Listings</a>
         </div>
     </div>
@@ -95,7 +94,8 @@
         <div class="container">
             <div class="d-flex row justify-content-center">
                 {{#locations}}
-                <div class="col-6 col-md-4 card text-center mt-4 mx-4 d-flex justify-content-center align-items-center bg-vv-primary">
+                <div
+                    class="col-6 col-md-4 card text-center mt-4 mx-4 d-flex justify-content-center align-items-center bg-vv-primary">
                     <div class="card-body">
                         <p id="location-card-text" class="card-title m-0">{{city}}</p>
                     </div>
@@ -138,9 +138,10 @@
                                     <path
                                         d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1zm13 2.383-4.708 2.825L15 11.105zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741M1 11.105l4.708-2.897L1 5.383z" />
                                 </svg></a></li>
-                        <li class="ms-3"><a class="color-vv-primary" href="https://www.instagram.com/karinavanessaa_/?igsh=YzVkODRmOTdmMw%3D%3D&utm_source=qr" target="_blank"><svg xmlns="http://www.w3.org/2000/svg"
-                                    width="24" height="24" fill="currentColor" class="bi bi-instagram"
-                                    viewBox="0 0 24 24">
+                        <li class="ms-3"><a class="color-vv-primary"
+                                href="https://www.instagram.com/karinavanessaa_/?igsh=YzVkODRmOTdmMw%3D%3D&utm_source=qr"
+                                target="_blank"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+                                    fill="currentColor" class="bi bi-instagram" viewBox="0 0 24 24">
                                     <path
                                         d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.9 3.9 0 0 0-1.417.923A3.9 3.9 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.9 3.9 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.9 3.9 0 0 0-.923-1.417A3.9 3.9 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599s.453.546.598.92c.11.281.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.5 2.5 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.5 2.5 0 0 1-.92-.598 2.5 2.5 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.233s.008-2.388.046-3.231c.036-.78.166-1.204.276-1.486.145-.373.319-.64.599-.92s.546-.453.92-.598c.282-.11.705-.24 1.485-.276.738-.034 1.024-.044 2.515-.045zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92m-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217m0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334" />
                                 </svg></a></li>
