fixed the banner again and added message form but it's commented out for now

--- a/src/pages/contact.mustache
+++ b/src/pages/contact.mustache
@@ -22,7 +22,7 @@
         <nav class="navbar navbar-expand-md shadow p-0">
 
             <div class="container-fluid p-0">
-                <div class="bg-vv-primary shadow-lg" id="header-main">
+                <div id="header-main">
                     <div class="px-3">
                         <a class="navbar-brand d-flex align-items-center flex-column flex-md-row justify-content-center justify-content-md-start m-0 pt-4"
                             href="/">
@@ -61,7 +61,7 @@
         </nav>
     </div>
 
-    <!--Hero Section-->
+    <!--Contact Info Section-->
     <div class="container col-xxl-8 px-4 py-5">
         <div>
             <h1 class="display-4 color-vv-secondary text-center">Ready to Buy or Sell? Get in Touch Today!</h1>
@@ -116,9 +116,77 @@
             </div>
         </div>
     </div>
-    <!--Listing Section-->
 
-    <!--Contact Section-->
+    <!--APPLICATION FORM 
+    <div class="container px-4 mt-5">
+        <h1 class="text-center">Message Me</h1>
+        <form
+          class="offset-lg-2 col-lg-8"
+          action="/contact/message"
+          method="POST"
+        > -->
+          <!--NAME
+          <div class="mb-3 col-sm-6">
+            <label for="fullname" class="form-label"> Full Name </label>
+            <input
+              type="text"
+              class="form-control"
+              name="name"
+              required
+              placeholder="John Doe"
+              id="fullname"
+            />
+          </div>-->
+  
+          <!--EMAIL
+          <div class="mb-3 col-sm-6">
+            <label for="email" class="form-label"> Email address </label>
+            <input
+              type="email"
+              class="form-control"
+              name="email"
+              placeholder="john@doe.com"
+              id="email"
+              aria-describedby="emailHelp"
+              required
+            />
+            <div id="emailHelp" class="form-text">
+              We'll never share your email with anyone else.
+            </div>
+          </div>-->
+  
+          <!--PHONE
+          <div class="mb-3 col-sm-6">
+            <label for="phone" class="form-label">Phone</label>
+            <input
+              type="tel"
+              class="form-control"
+              id="phone"
+              placeholder="(989)898-9898"
+              name="phone"
+              required
+            />
+          </div>-->
+  
+          <!--Message
+          <div class="mb-3">
+            <label for="message" class="form-label">Message</label>
+            <textarea
+              placeholder="How can I help you?"
+              class="form-control"
+              id="message"
+              name="message"
+              rows="5"
+              required
+            ></textarea>
+          </div>-->
+  
+          <!--SUBMIT BUTTON
+          <button type="submit" class="btn btn-primary">
+            Send Message
+          </button>
+        </form>
+      </div>-->
 
     <!--Footer Section-->
     <div class="container-fluid bg-vv-primary">
