--- a/src/pages/index.mustache
+++ b/src/pages/index.mustache
@@ -22,16 +22,20 @@
 
             <div class="container-fluid p-0">
                 <div id="header-main">
-                    <div class="px-3">
-                        <a class="navbar-brand d-flex align-items-center flex-column flex-md-row justify-content-center justify-content-md-start m-0 pt-4" href="/">
-                            <img src="Logo_Capre_blk_and_gold__1_-removebg-preview.PNG" alt="Capre Logo PNG"
-                                height="64px" width="64px">
-                            <h2>Vanessa Vega</h2>
-                        </a>
-                    </div>
-                    <div class="text-center text-md-start px-md-5 mx-md-5 color-vv-primary">
-                        <p>DRE 02227468</p>
-                        <p>(909)746-9872</p>
+                    <div class="bg-black w-75 m-2 pb-2 bg-opacity-75 rounded">
+                        <div class="px-3">
+                            <a class="navbar-brand d-flex align-items-center flex-column flex-md-row justify-content-center justify-content-md-start m-0 pt-4"
+                                href="/">
+                                <img src="Logo_Capre_blk_and_gold__1_-removebg-preview.PNG" alt="Capre Logo PNG"
+                                    height="64px" width="64px">
+                                <h2>Vanessa Vega</h2>
+                            </a>
+                        </div>
+                        <div class="text-center text-md-start px-md-5 mx-md-5 color-vv-primary">
+                            <p>DRE 02227468</p>
+                            <p>(909)746-9872</p>
+                        </div>
+
                     </div>
 
                 </div>
@@ -41,18 +45,22 @@
                     aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse justify-content-end align-items-end mx-3" id="navbarSupportedContent">
-                    <ul class="navbar-nav ">
-                        <li class="nav-item">
-                            <a class="nav-link" href="/about">About</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="/listings">Listings</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="/contact">Contact</a>
-                        </li>
-                    </ul>
+                <div class="collapse navbar-collapse justify-content-end align-items-end mx-3"
+                    id="navbarSupportedContent">
+                    <div class="bg-black p-2 bg-opacity-75 rounded">
+                        <ul class="navbar-nav ">
+                            <li class="nav-item">
+                                <a class="nav-link" href="/about">About</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="/listings">Listings</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="/contact">Contact</a>
+                            </li>
+                        </ul>
+                    </div>
+
                 </div>
             </div>
         </nav>
