showed listing 1 as sold

--- a/src/pages/listings.mustache
+++ b/src/pages/listings.mustache
@@ -84,8 +84,9 @@
                     <img src="1-1.jpeg" alt="Thumbnail Picture">
                     <img id="img1">
                     <div class="card-body">
-                        <p class="card-text">Price: $110,000</p>
+                        <p class="card-text">Price: $100,000</p>
                         <p class="card-text">Lot Size: 39,204.00 sqft</p>
+                        <p class="card-text" style="color: red">SOLD</p>
                         <a
                             href="https://portal.onehome.com/en-US/property/aotf~1062063365~CRMLSM?token=eyJPU04iOiJDUk1MU00iLCJ0eXBlIjoiMCIsInNldGlkIjoiODI5NzQ2OTg0Iiwic2V0a2V5IjoiMzk5IiwiZW1haWwiOiJlZHVhcmRvLnJleWVzLjE0NTI5N0BnbWFpbC5jb20iLCJyZXNvdXJjZWlkIjowLCJhZ2VudGlkIjoyMjA2MjE2LCJsaXN0aW5naWQiOiI0MTA0MDEyMTEiLCJWaWV3TW9kZSI6IjEifQ%3D%3D&searchId=2bbea256-1896-3795-b5d2-96cd91fffb95" target="_blank">View
                             Property</a>
