Changed one of the locations and added 6 new listings

--- a/src/public/styles.css
+++ b/src/public/styles.css
@@ -76,7 +76,7 @@ a {
     color: #ffffff;
 }
 
-#listing1 {
+#listingCard {
     font-family: 'Courier New', Courier, monospace;
     font-weight: 600;
 }
